--- a/src/components/Experience/Experience.module.scss
+++ b/src/components/Experience/Experience.module.scss
@@ -16,13 +16,20 @@
   .principle{
     text-align: center;
     margin: 3% 0;
+    h3{
+      font-size: 24px;
+      margin-bottom: 2%;
+    }
   }
   .values{
     .values_title{
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 10px;
+      gap: 15px;
+      h4{
+        margin-bottom: 2%;
+      }
     }
   }
 }
