--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,10 @@
-div{
+.main_header{
   position: relative;
+  padding-bottom: 4%;
+  .header_video{
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+  }
   header{
     .header_title{
       position: absolute;
@@ -7,10 +12,6 @@ div{
       left: 5%;
       color: #fff;
       font-weight: 700;
-    }
-    .header_video{
-      border-bottom-left-radius: 50px;
-      border-bottom-right-radius: 50px;
     }
     .main_title{
       display: flex;
@@ -27,6 +28,36 @@ div{
         width: 60%;
         text-align: center;
         font-weight: 500;
+      }
+    }
+  }
+}
+@media (max-width:768px) {
+  .main_header{
+    header{
+      .header_title{
+        font-size: 24px;
+      }
+      .main_title{
+        gap: 10px;
+        h2{font-size: 30px;}
+        h4{
+          font-size: 22px;
+          width: 80%;
+        }
+      }
+    }
+  }
+}
+@media (max-width:576px) {
+  .main_header{
+    header{
+      .main_title{
+        gap: 10px;
+        h2{font-size: 30px;}
+        h4{
+          font-size: 18px;
+        }
       }
     }
   }
