--- a/src/components/Products/Product/Product.module.scss
+++ b/src/components/Products/Product/Product.module.scss
@@ -1,28 +1,123 @@
 .product{
+  box-shadow: 0px 0px 5px 2px #000000;
   width: 80%;
   padding: 2%;
   border-top-left-radius: 50px;
-  background-color: rgb(207, 207, 207);
-  margin: 0 2% 0 2%;
+  background-color: rgb(235, 230, 230);
+  margin: 2% 0 2% 10%;
+  &:hover .product_content p{
+    color: rgb(20, 218, 20);
+  }
+  &:hover .product_content h4{
+    color: #fff;
+  }
   .product_content{
-    width: 80%;
-    margin-left: 5%;
+    width: 90%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     h4{
       border-radius: 20px;
       padding: 2% 5%;
+      transition: color 0.2s 0.1s ease-out;
       background: linear-gradient(104.81deg, #3AC168 9.77%, #0DA27A 82.92%);
     }
     p{
       margin-top: 3%;
       text-align: center;
-      font-size: 18px;
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 1.3;
+      height: 4em;
+      transition: color 0.2s 0.1s ease-out;
     }
     img{
       width: 60%;
       text-align: center;
+    }
+  }
+}
+@media (max-width:1600px){
+  .product{
+    .product_content{
+      p{
+        height: 5.2em;
+      }
+    }
+  }
+}
+@media (max-width:1300px){
+  .product{
+    .product_content{
+      width: 95%;
+    }
+  }
+}
+@media (max-width:1200px){
+  .product{
+    .product_content{
+      p{
+        font-size: 14px;
+        height: 6em;
+      }
+    }
+  }
+}
+@media (max-width:1050px){
+  .product{
+    .product_content{
+      p{
+        font-size: 15px;
+        height: 5.2em;
+      }
+    }
+  }
+}
+@media (max-width:768px){
+  .product{
+    width: 70%;
+    .product_content{
+      p{
+        font-size: 16px;
+        height: 5.2em;
+      }
+    }
+  }
+}
+@media (max-width:500px){
+  .product{
+    .product_content{
+      p{
+        line-height: 1.2;
+        font-size: 14px;
+        height: 5.3em;
+      }
+    }
+  }
+}
+@media (max-width:400px){
+  .product{
+    .product_content{
+      p{
+        font-size: 12px;
+        height: 5.4em;
+      }
+    }
+  }
+}
+@media (max-width:350px){
+  .product{
+    width: 80%;
+    .product_content{
+      h4{
+        padding: 2%;
+      }
+      p{
+        font-size: 12px;
+        height: 5.4em;
+        line-height: 1.1;
+      }
     }
   }
 }
