--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -1,13 +1,33 @@
-.products{
-  .products_title{
-    text-align: center;
-    padding: 2% 0;
-    h1{
-      margin-bottom: 2%;
+.main_products{
+  background-color: rgb(238, 235, 235);
+  .products{
+    .products_title{
+      text-align: center;
+      padding: 2% 0;
+      h2{
+        margin-bottom: 2%;
+        font-size: 28px;
+      }
+      p{
+        font-weight: 500;
+        font-size: 18px;
+        width: 60%;
+        margin: 0 auto;
+      }
     }
-    p{
-      font-weight: 400;
-      font-size: 18px;
+  }
+}
+@media (max-width:576px){
+  .main_products{
+    .products{
+      .products_title{
+        h2{
+          font-size: 24px;
+        }
+        p{
+          font-size: 16px;
+        }
+      }
     }
   }
 }
