--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -1,14 +1,54 @@
-.main_products{
+.main_products {
   background-color: rgb(238, 235, 235);
-  .products{
-    .products_title{
+
+  .products {
+    .right_back {
+      width: 55px;
+      height: 55px;
+      border-radius: 50px;
+      position: absolute;
+      right: -3%;
+      top: 40%;
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      .arrow {
+        position: relative;
+        width: 100%;
+        transform: rotate(180deg);
+      }
+    }
+
+    .left_back {
+      width: 55px;
+      height: 55px;
+      border-radius: 50px;
+      position: absolute;
+      left: -2%;
+      bottom: 40%;
+      z-index: 2;
+      &:hover {
+        cursor: pointer;
+      }
+
+      .left_arrow {
+        position: relative;
+        width: 100%;
+      }
+    }
+
+    .products_title {
       text-align: center;
       padding: 2% 0;
-      h2{
+
+      h2 {
         margin-bottom: 2%;
         font-size: 28px;
       }
-      p{
+
+      p {
         font-weight: 500;
         font-size: 18px;
         width: 60%;
@@ -17,14 +57,16 @@
     }
   }
 }
-@media (max-width:576px){
-  .main_products{
-    .products{
-      .products_title{
-        h2{
+
+@media (max-width:576px) {
+  .main_products {
+    .products {
+      .products_title {
+        h2 {
           font-size: 24px;
         }
-        p{
+
+        p {
           font-size: 16px;
         }
       }
