feat/axios request

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,6 +1,7 @@
 .footer{
   text-align: center;
   .data_company{
+    margin: 2% 0;
     display: flex;
     justify-content: space-around;
     div{
