--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,19 @@
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
   }
+  .select_lang{
+    color: #fff;
+    position: absolute;
+    right: 5%;
+    top: 4%;
+    width: 7%;
+    padding: 0.5% 0;
+    border-radius: 5px;
+    background: linear-gradient(104.81deg, #3AC168 9.77%, #0DA27A 82.92%);
+    option{
+      background: #0DA27A;
+    }
+  }
   header{
     .header_title{
       position: absolute;
